Background stretching fix.

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -30,6 +30,8 @@
 	background-color: var(--fds-solid-background-base);
 
 	background-image: url('/bloom/bloom-mica-light.png');
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
 }
